--- a/arch/arm/configs/msm8916_sec_defconfig
+++ b/arch/arm/configs/msm8916_sec_defconfig
@@ -2,7 +2,6 @@
 CONFIG_KERNEL_LZ4=y
 CONFIG_DECOMPRESS_LZ4=y
 CONFIG_RD_LZ4=y
-CONFIG_DEFAULT_CFQ=y
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_SYSVIPC=y
 CONFIG_AUDIT=y
@@ -67,6 +66,8 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_CHILL=y
+CONFIG_CPU_FREQ_GOV_RELAXED=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_MULTIPLE_DRIVERS=y
 CONFIG_VFP=y
@@ -684,3 +685,5 @@ CONFIG_SECCOMP=y
 #optimize mmc block delay on resume
 CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
 
+# I/O Schedulers
+CONFIG_DEFAULT_MAPLE=y
